--- a/src/index.sass
+++ b/src/index.sass
@@ -25,25 +25,22 @@ html, body
   .temp-oggi
     grid-column-start: 2
     grid-column-end:  math.floor( math.div($num-of-cells, 2))
-    grid-row: 2 / 5
+    grid-row: 4 / 5
+    font-size: 3rem
 
   .desc-oggi
     grid-column-start: math.ceil( math.div($num-of-cells + 1, 2)) + 1
     grid-column-end:  $num-of-cells
     grid-row: 2 / 5
   .date
-    grid-area: 6/2/9/10
+    grid-area: 9/2/12/10
 
   .min-temp
     /*grid-column-start: 11
       grid-colum-end: 17
       grid-row-start: 6*
-    grid-area: 6/11/9/17
+    grid-area: 9/11/12/17
   .max-temp
-      grid-area: 6/18/9/22
-  .mattina
-    grid-area: 10/2/16/9
-  .pomeriggio
-    grid-area: 10/10/16/17
-  .sera
-    grid-area: 10/18/16/24
+      grid-area: 9/18/12/22
+  #w-desc
+    text-transform: capitalize
