ref: document weather and ui's functions

--- a/src/index.sass
+++ b/src/index.sass
@@ -2,6 +2,8 @@
 $num-of-cells: 24
 *
   box-sizing: border-box
+  background-color: #9d4bca
+  color: white
 html, body
   width: 100vw
   height: 100vh
@@ -44,3 +46,7 @@ html, body
       grid-area: 9/18/12/22
   #w-desc
     text-transform: capitalize
+  .err-msg-visible
+    display: block
+  .err-msg-hidden
+    display: none
